[gd_scene load_steps=5 format=3 uid="uid://start_screen"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(1, 1, 1, 0.95)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="2"]
font_size = 24
font_color = Color(0.2, 0.2, 0.2, 1)

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_bottom = -50.0
theme = ExtResource("2")
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üåà Color Switch Runner"
label_settings = SubResource("2")
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Match your color to the obstacles to survive!"
horizontal_alignment = 1
autowrap_mode = 1

[node name="ControlsBox" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ControlsBox"]
layout_mode = 2

[node name="DesktopLabel" type="Label" parent="VBoxContainer/ControlsBox/VBoxContainer2"]
layout_mode = 2
text = "Desktop: Space bar or click to change color"

[node name="MobileLabel" type="Label" parent="VBoxContainer/ControlsBox/VBoxContainer2"]
layout_mode = 2
text = "Mobile: Tap to change color"

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="LeaderboardContainer" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="LeaderboardTitle" type="Label" parent="VBoxContainer/LeaderboardContainer"]
layout_mode = 2
text = "üèÜ Top Scores"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/LeaderboardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="TopScoresList" type="VBoxContainer" parent="VBoxContainer/LeaderboardContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your name"
max_length = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "‚ñ∂ START GAME"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CLOSE"